fixed issues on mobile devices w/ the coding page

--- a/src/scss/_coding.scss
+++ b/src/scss/_coding.scss
@@ -2,6 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  @media (max-width: 1024px) {
+    margin-bottom: 32px;
+  }
 }
 
 .cell-coding {
@@ -15,6 +18,9 @@
 .coding-page-title {
   color: white;
   font-size: 2.5rem;
+  @media (max-width: 391px) {
+    font-size: 2rem;
+  }
 }
 
 .coding-title-wrapper {
